<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dirtyWhite"
    android:padding="8dp">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/curve_bg_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="78dp"
        android:id="@+id/cardView"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="18dp"
        app:cardCornerRadius="8dp"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="8dp"
        app:layout_constraintTop_toBottomOf="@id/imageView1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cavite_state_university_naic"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emergency_evacuation_assembly_area"
                android:textStyle="normal"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:textSize="12sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textHeader_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginVertical="28dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:layout_marginHorizontal="18dp"
        android:text="@string/explore_our_campus_in_2d"
        app:layout_constraintTop_toBottomOf="@id/cardView" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="168dp"
        android:id="@+id/cardView2"
        app:cardCornerRadius="8dp"
        android:layout_marginHorizontal="8dp"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="8dp"
        android:layout_marginVertical="28dp"
        app:layout_constraintTop_toBottomOf="@id/textHeader_id">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center"

            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Discover:"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="28dp"
              >

                <ImageView
                    android:id="@+id/icon"
                    android:src="@drawable/baseline_business_24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toStartOf="@id/text1"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:tint="@color/green" />

                <TextView
                    android:id="@+id/text1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detailed_buildings_of_cvsu"
                    android:textStyle="normal"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/icon"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="28dp"
                >

                <ImageView
                    android:id="@+id/icon2"
                    android:src="@drawable/tree_solid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toStartOf="@id/text2"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:tint="@color/green" />

                <TextView
                    android:id="@+id/text2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/green_spaces"
                    android:textStyle="normal"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/icon2"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="28dp"
                >

                <ImageView
                    android:id="@+id/icon3"
                    android:src="@drawable/map_solid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toStartOf="@id/text3"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:tint="@color/green" />

                <TextView
                    android:id="@+id/text3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/list_of_rooms_in_each_building"
                    android:textStyle="normal"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/icon3"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <Button
        android:id="@+id/feedbackAndRateBtn_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="normal"
        android:textSize="16sp"
        android:letterSpacing="0.2"
        android:layout_marginTop="18dp"
        android:layout_marginVertical="8dp"
        android:drawablePadding="8dp"
        android:drawableStart="@drawable/message_regular"
        android:textAlignment="center"
        android:backgroundTint="@color/black"
        android:textColor="@color/white"
        android:layout_marginHorizontal="8dp"
        android:text="FEEDBACK"
        app:layout_constraintTop_toBottomOf="@id/cardView2" />

    <Button
        android:id="@+id/mapBtn"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:textStyle="normal"
        android:textSize="16sp"
        android:letterSpacing="0.2"
        android:layout_marginVertical="8dp"
        android:textAlignment="center"
        android:drawablePadding="8dp"
        android:drawableStart="@drawable/location_dot_solid"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:layout_marginHorizontal="8dp"
        android:text="View Map"
        app:layout_constraintTop_toBottomOf="@id/feedbackAndRateBtn_id" />

</androidx.constraintlayout.widget.ConstraintLayout>
